kubernetes files added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/softwareorganization
-spring.datasource.username=postgres
-spring.datasource.password=Cpt.price#+218
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+#spring.datasource.url=jdbc:postgresql://localhost:5433/softwareorganization
+#spring.datasource.username=postgres
+#spring.datasource.password=Cpt.price#+218
+
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+##spring.datasource.username=postgres
+##spring.datasource.password=Cpt.price#+218
+
+ 
